Add email for contact

--- a/2020/PPS/notes/notes.tex
+++ b/2020/PPS/notes/notes.tex
@@ -6,7 +6,7 @@
 \author{Franz Miltz}
 \date{May 28, 2020}
 \maketitle
-\noindent Textbook: M. Liebeck, \emph{A Concise Introduction to Pure Mathematics}, Fourth Edition
+\noindent If you have questions, or want to contribute, email me at \texttt{notes@miltz.me}.
 \mkthms
 \tableofcontents
 \pagebreak
