--- a/2021/FPM/algebra-notes/notes.tex
+++ b/2021/FPM/algebra-notes/notes.tex
@@ -6,7 +6,7 @@
 \title{Fundamentals of Pure Mathematics - Algebra (SEM4)}
 \author{Franz Miltz}
 \maketitle
-\noindent Textbook: C.R. Jordan \& D.A. Jordan, \emph{Groups}
+\noindent If you have questions, or want to contribute, email me at \texttt{notes@miltz.me}.
 \tableofcontents
 \pagebreak
 
