--- a/2021/INF2C/notes/notes.tex
+++ b/2021/INF2C/notes/notes.tex
@@ -7,7 +7,7 @@
 \title{Introduction to Computer Systems (SEM3)}
 \author{Franz Miltz}
 \maketitle
-\noindent Textbook: D. A. Patterson \& J. L. Henessey, \emph{Computer Organization \& Design}
+\noindent If you have questions, or want to contribute, email me at \texttt{notes@miltz.me}.
 \tableofcontents
 \pagebreak
 \section{Data Representation}
