--- a/2022/GEO/notes/notes.tex
+++ b/2022/GEO/notes/notes.tex
@@ -6,7 +6,7 @@
 \author{Franz Miltz}
 \date{9 December 2021}
 \maketitle
-\noindent Textbook: K. Tapp, \emph{Differential Geometry of Curves and Surfaces}
+\noindent If you have questions, or want to contribute, email me at \texttt{notes@miltz.me}.
 \tableofcontents
 \pagebreak
 
