--- a/2022/ITCS/notes/notes.tex
+++ b/2022/ITCS/notes/notes.tex
@@ -7,7 +7,9 @@
 \author{Franz Miltz}
 \begin{document}
 \maketitle
-\noindent Textbook: M. Sipser, \emph{Introduction to the Theory of Computation}
+
+\noindent If you have questions, or want to contribute, email me at \texttt{notes@miltz.me}.
+
 \tableofcontents
 \pagebreak
 
@@ -745,7 +747,7 @@
 	$HP\in NP$ and $\texttt{TIMETABLING}\in NP$.
 \end{theorem*}
 
-\subsection{The class NPC}
+\subsection{NP completeness}
 
 \begin{definition*}[NP-hard, NP-complete]
 	$Q$ is NP-hard iff $Q'\leq^P Q$ for every $Q\in NP$.
