--- a/2022/MS/notes/notes.tex
+++ b/2022/MS/notes/notes.tex
@@ -7,7 +7,7 @@
 \title{Metric Spaces (SEM6)}
 \author{Franz Miltz}
 \maketitle
-\noindent Textbook: V. Bryant, \emph{Metric Spaces: Iteration and Application}
+\noindent If you have questions, or want to contribute, email me at \texttt{notes@miltz.me}.
 \tableofcontents
 \pagebreak
 
