--- a/2023/PRJ/category_theory_notes/notes.tex
+++ b/2023/PRJ/category_theory_notes/notes.tex
@@ -18,7 +18,7 @@
 \title{Category Theory}
 \author{Franz Miltz}
 \maketitle
-\noindent Textbook: Steve Awodey, \emph{Category Theory}
+\noindent If you have questions, or want to contribute, email me at \texttt{notes@miltz.me}.
 \tableofcontents
 \pagebreak
 
