--- a/2020/ILA/notes/notes.tex
+++ b/2020/ILA/notes/notes.tex
@@ -7,7 +7,7 @@
 \author{Franz Miltz}
 \date{December 01, 2019}
 \maketitle
-\noindent Textbook: D. Poole, \emph{Linear Algebra: A Modern Introduction}, Fourth Edition
+\noindent If you have questions, or want to contribute, email me at \texttt{notes@miltz.me}.
 \tableofcontents
 \pagebreak
 \section{Vectors}
