--- a/2021/INF2D/notes/notes.tex
+++ b/2021/INF2D/notes/notes.tex
@@ -8,7 +8,7 @@
 \date{10 May 2021}
 \begin{document}
 \maketitle
-\noindent Textbook: S. Russel \& P. Norvig, \emph{Aritificial Intelligence: A Modern Approach}, Third Edition
+\noindent If you have questions, or want to contribute, email me at \texttt{notes@miltz.me}.
 \tableofcontents
 \pagebreak
 
