Delete old content

--- a/2023/IQC/notes/notes.tex
+++ b/2023/IQC/notes/notes.tex
@@ -1,6 +1,6 @@
+ %! TEX program = lualatex
 \documentclass{article}
 \usepackage{notes-preamble}
-\usepackage{enumitem}
 \mkthmstwounified
 
 \title{Introduction to Quantum Computing (SEM7)}
