--- a/2023/IQC/notes/notes.tex
+++ b/2023/IQC/notes/notes.tex
@@ -5,7 +5,15 @@
 
 \title{Introduction to Quantum Computing (SEM7)}
 \author{Franz Miltz}
+
 \begin{document}
 \maketitle
+
+\section{State of quantum computing}
+
+\begin{itemize}
+  \item \texttt{GraphIsomorphism} is in $NP$ but may not be in $BQP$
+  \item quantum computers are not yet practical due to two qubit gate errors
+\end{itemize}
 
 \end{document}
